--- a/_sass/landing.scss
+++ b/_sass/landing.scss
@@ -1,11 +1,75 @@
 @import 'libs/skel';
 
 #churchImg {
-  background-image: url("/assets/imgs/church.jpg") !important;
+  //background-image: url("/assets/imgs/church-biala-rawska.jpg") !important;
+  @include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("/assets/imgs/church-biala-rawska.jpg")'));
+
+  .inner {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+
+    h2 {
+      border-top: solid 2px _palette(bg);
+      border-bottom: solid 2px _palette(bg);
+      color: _palette(bg);
+      display: inline-block;
+      padding-top: 1em;
+      padding-bottom: 1em;
+      position: relative;
+
+      &:before {
+        content: '';
+        display: block;
+        height: 1px;
+      }
+
+      &:after {
+        content: '';
+        display: block;
+        height: 1px;
+      }
+    }
+
+  }
 }
 
 #palaceImg {
-  background-image: url("/assets/imgs/palace.jpg") !important;
+  //background-image: url("/assets/imgs/palac-chojnata.jpg") !important;
+  @include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("/assets/imgs/palac-chojnata.jpg")'));
+
+  .inner {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+
+    h2 {
+      border-top: solid 2px _palette(bg);
+      border-bottom: solid 2px _palette(bg);
+      color: _palette(bg);
+      display: inline-block;
+      padding-top: 1em;
+      padding-bottom: 1em;
+      position: relative;
+
+      &:before {
+        content: '';
+        display: block;
+        height: 1px;
+      }
+
+      &:after {
+        content: '';
+        display: block;
+        height: 1px;
+      }
+    }
+
+  }
 }
 
 #moneyImg {
