--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,12 +8,8 @@
         <div id="menu">
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#churchImg">Ślub</a></li>
-            <li><a href="#palaceImg">Wesele</a></li>
-            <li><a href="#moneyImg">Fundacja</a></li>
-            <li><a href="#accomodation">Noclegi</a></li>
-            <li><a href="#timePlan">Plan</a></li>
-            <li><a href="#contact">Kontakt</a></li>
+            <li><a href="#churchImg">Reportaż fotograficzny</a></li>
+            <li><a href="#palaceImg">Reportaż filmowy</a></li>
 <!--            {% for my_page in site.pages %}-->
 <!--            {% if my_page.title %}-->
 <!--            <li><a href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a></li>-->
