--- a/_sass/landing.scss
+++ b/_sass/landing.scss
@@ -2,7 +2,7 @@
 
 #churchImg {
   //background-image: url("/assets/imgs/church-biala-rawska.jpg") !important;
-  @include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("/assets/imgs/church-biala-rawska.jpg")'));
+  @include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("/assets/imgs/album.jpg")'));
 
   .inner {
     display: flex;
