--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
         <div id="menu">
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#churchImg">Reportaż fotograficzny</a></li>
+            <li><a href="#churchImg">Reportaż foto</a></li>
             <li><a href="#palaceImg">Reportaż filmowy</a></li>
 <!--            {% for my_page in site.pages %}-->
 <!--            {% if my_page.title %}-->
