--- a/_sass/landing.scss
+++ b/_sass/landing.scss
@@ -1,7 +1,7 @@
 @import 'libs/skel';
 
 #churchImg {
-  //background-image: url("/assets/imgs/church-biala-rawska.jpg") !important;
+  //background-image: url("/assets/imgs/album.jpg") !important;
   @include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("/assets/imgs/album.jpg")'));
 
   .inner {
@@ -37,8 +37,8 @@
 }
 
 #palaceImg {
-  //background-image: url("/assets/imgs/palac-chojnata.jpg") !important;
-  @include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("/assets/imgs/palac-chojnata.jpg")'));
+  //background-image: url("/assets/imgs/film.jpg") !important;
+  @include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("/assets/imgs/film.jpg")'));
 
   .inner {
     display: flex;
